# ai-invention-d144fc-thermodynamic-entropy-calibration-for-im

./: README.md
chat/: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_images.py  fetch_bib.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  README.md  data.py  download_and_standardize.py  mini_data_out.json  preview_data_out.json  preview_datasets.py  pyproject.toml  requirements.txt
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  method.py  pyproject.toml
round-1/experiment-1/src/results/: predictions.npz  preview_method_out.json  synthetic_labels.npy  synthetic_logits.npy
round-1/experiment-1/src/results_mini/: method_out.json  predictions.npz
round-1/research-1/: README.md
round-2/evaluation-1/: README.md
round-2/evaluation-1/src/: .sdk_openhands_agent_struct_out.json  README.md  eval.py  experiment_out.json  metadata.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-2/evaluation-1/src/results/: full_eval_out.json  reliability_data.json  statistical_tests.json  tradeoff_data.json
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README_RESULTS.md  convert_output.py  download_models.py  full_method_out.json  method.py  method_backup.py  method_out.json  method_v2.py  mini_method_out.json  preview_method_out.json  pyproject.toml  results_summary.txt  test_quick.py  test_sst2.py  write_method.py
round-2/experiment-2/: README.md
(+80 files in other folders)
