[project]
name = "thermodynamic-entropy-calibration"
version = "0.1.0"
description = "Thermodynamic Entropy Calibration for LLM Classifiers"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.1+cu121",
    "transformers==5.14.1",
    "datasets==5.0.0",
    "numpy==2.5.1",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "loguru>=0.7.0",
    "psutil>=7.2.0",
    "tqdm>=4.66.0",
    "tokenizers>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
