[project]
name = "llm-calibration-evaluation"
version = "0.1.0"
description = "Statistical evaluation of LLM calibration methods"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.1",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "matplotlib==3.11.0",
    "loguru==0.7.3",
    "pandas==3.0.3",
    "jsonschema==4.26.0",
]
