[project]
name = "tec-vs-ts-experiment"
version = "0.1.0"
description = "TEC vs TS calibration experiment for LLM classifiers"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.1",
    "transformers==5.14.1",
    "datasets",
    "scikit-learn==1.9.0",
    "scipy>=1.14",
    "numpy>=2.0",
    "loguru>=0.7",
    "tqdm",
    "accelerate",
    "huggingface-hub",
    "jsonchema>=4.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
